<resources>
    <string name="app_name">CitiCoinin</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="homepage_tab_text_news">发现</string>
    <string name="homepage_tab_text_mall">资产</string>
    <string name="homepage_tab_text_mine">我的</string>
    <string name="mine_title">我</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="property_drawer_create_wallet">创建钱包</string>
    <string name="property_drawer_in">充值</string>
    <string name="property_drawer_out">提现</string>
    <string name="create_wallet_name_hint">钱包名称</string>
    <string name="create_wallet_pwd_hint">密码</string>
    <string name="create_wallet_pwd_again_hint">重复密码</string>
    <string name="create_wallet_pwd_reminder_info_hint">密码提示信息(可不填)</string>
    <string name="create_wallet_agreement_reminder">我已经仔细阅读并同意</string>
    <string name="create_wallet_agreement">服务及隐私条款</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="create_wallet_alert1">* 密码用于隐私保护和交易授权，强度非常重要</string>
    <string name="create_wallet_alert2">* Citi  不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="property_total_assets">总资产(¥)</string>
    <string name="property_approximate">≈</string>
    <string name="mine_wallet_manage">钱包管理</string>
    <string name="mine_trade_record">交易验证</string>
    <string name="mine_account_manage">账户管理</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_contracts">联系人</string>
    <string name="mine_system_setting">系统设置</string>
    <string name="mine_personal_center">账户管理</string>
    <string name="mine_help_center">帮助中心</string>
    <string name="mine_about_us">关于我们</string>
    <string name="discovery_application">特色功能</string>
    <string name="discovery1">预付工资</string>
    <string name="discovery2">外汇买卖</string>
    <string name="discovery3">预存款</string>
    <string name="discovery4">押金管理</string>
    <string name="discovery5">离线支付</string>
    <string name="discovery_news">资讯推送</string>
    <string name="assetkind1">人民币</string>
    <string name="assetkind2">港元</string>
    <string name="assetkind3">美元</string>
    <string name="assetkind4">英镑</string>
    <string name="assetkind5">澳元</string>
    <string name="recent_transaction">最近交易记录</string>
    <string name="add_new_property_title">添加新资产</string>
    <string name="search_toolbar_cancel">取消</string>
    <string name="search_hint">搜索  Token  名称或合约地址</string>
    <string name="search_ico_empty_hint1">没找匹配的结果？</string>
    <string name="search_ico_empty_hint2">试试在页面底部提交新token</string>
    <string name="search_upload_token">向我们提交新Token</string>
    <string name="gathering_qrcode_title">收款单生成</string>
    <string name="gathering_qrcode_share">分享</string>
    <string name="gathering_qrcode_gathering_money">收款金额</string>
    <string name="gathering_qrcode_copy_gathering_address">复制收款地址</string>
    <string name="gathering_qrcode_copy_success">已复制</string>
    <string name="contact_no_data">暂时没有联系人</string>
    <string name="transaction_hash">交易哈希</string>
    <string name="transaction_address_from">发送地址</string>
    <string name="transaction_address_to">收款地址</string>
    <string name="transaction_amount">交易额度</string>
    <string name="transaction_note">交易备注</string>
    <string name="transaction_time">交易日期</string>
    <string name="etc_transfer_title">CoinBank转账</string>
    <string name="etc_transfer_address">收款人钱包地址</string>
    <string name="etc_transfer_time">收款时间</string>
    <string name="etc_transfer_stop">终止交易</string>
    <string name="etc_transfer_finish">交易完成</string>
    <string name="etc_transfer_retime">剩余时间</string>
    <string name="etc_transfer_money">转账金额</string>
    <string name="etc_transfer_remark">备注</string>
    <string name="etc_transfer_sub">确认转账</string>
    <string name="etc_transfer_gas_cost">矿工费用</string>
    <string name="etc_transfer_gas_price">自定义 Gas Price</string>
    <string name="etc_transfer_gas">自定义 Gas</string>
    <string name="etc_transfer_advanced_setting_help">如何设置参数?</string>
    <string name="etc_transfer_advanced_setting">高级选项</string>
    <string name="etc_transfer_hex_data">十六进制数据</string>
    <string name="etc_transfer_next">下一步</string>
    <string name="etc_transfer_gas_slow">慢</string>
    <string name="etc_transfer_gas_quick">快</string>
    <string name="etc_transfer_ether_unit"> RMB</string>
    <string name="property_detail_title">币种</string>
    <string name="property_detail_transfer">转账</string>
    <string name="property_detail_gathering">收款</string>
    <string name="wallet_manager_create_wallet">创建钱包</string>
    <string name="wallet_manager_load_wallet">导入钱包</string>
    <string name="wallet_manager_title">管理钱包</string>
    <string name="news_center_all_read">全部已读</string>
    <string name="news_center_title">消息中心</string>
    <string name="system_setting_title">系统设置</string>
    <string name="system_setting_language">多语言</string>
    <string name="system_setting_currency">货币单位</string>
    <string name="system_setting_web3">web3设置</string>
    <string name="system_setting_gesture">收拾密码</string>
    <string name="language_setting_chinese">简体中文</string>
    <string name="language_setting_English">English</string>
    <string name="language_setting_save">保存</string>
    <string name="currency_unit_setting_cny">CNY</string>
    <string name="currency_unit_setting_usd">USD</string>
    <string name="web3_setting_wallet_service_url">WALLET SERVICE URL</string>
    <string name="web3_setting_wallet_service_url_hint">https://web3.token.im</string>
    <string name="web3_setting_reset_url">设置为默认的URL</string>
    <string name="trading_pub_title">公共链头</string>
    <string name="trading_per_title">私人链头</string>
    <string name="switch_wallet_title">切换账户</string>
    <string name="wallet_backup_tips1">最后一步：立即备份你的钱包！</string>
    <string name="wallet_backup_tips2">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上，然后尝试转入、转出小额资产开始使用.</string>
    <string name="wallet_backup_backup_btn">备份钱包</string>
    <string name="wallet_backup_backup_help">查看备份详细教程</string>
    <string name="input_pwd_dialog_tip">请输入密码</string>
    <string name="input_pwd_delete_tip">请慎重，此操作无法撤销</string>
    <string name="input_pwd_dialog_confirm">确认</string>
    <string name="mnemonic_backup_title">备份助记词</string>
    <string name="mnemonic_backup_tips1">抄写下你的钱包助记词</string>
    <string name="mnemonic_backup_tips2">助记词用于回复钱包或重置钱包密码，降它准确的抄写到纸上，并存放在只有你知道的安全的地方。</string>
    <string name="mnemonic_backup_alert_tips">如果有人获取你的助记词将直接获取你的资产！请抄写下助记词并存放在安全的地方。</string>
    <string name="mnemonic_backup_alert_btn">知道了</string>
    <string name="mnemonic_backup_alert_title">请勿截图</string>
    <string name="verify_backup_tip1">确认你的钱包助记词</string>
    <string name="verify_backup_tip2">请按顺序点击助记词，以确认你的备份助记词正确。</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="load_wallet_title">导入钱包</string>
    <string name="load_wallet_btn">开始导入</string>
    <string name="load_wallet_indicator_mnemonic">助记词</string>
    <string name="load_wallet_indicator_official">官方钱包</string>
    <string name="load_wallet_indicator_private_key">私钥</string>
    <string name="load_wallet_indicator_observer">观察</string>
    <string name="load_wallet_by_mnemonic_hint">助记词，按空格分隔</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_by_mnemonic_standard">m/44\'/60\'/0\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_ledger">m/44\'/60\'/0\'/0</string>
    <string name="load_wallet_by_mnemonic_standard_custom">m/44\'/60\'/1\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_jaxx_option">m/44\'/60\'/0\'/0/0 Jaxx,Metamask(ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_ledger_option">m/44\'/60\'/0\'/0 Ledger (ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_custom_option">m/44\'/60\'/1\'/0/0 自定义路径</string>
    <string name="load_wallet_by_mnemonic_help">什么是助记词？</string>
    <string name="load_wallet_already_exist">钱包以存在</string>
    <string name="load_wallet_by_official_wallet_keystore_hint">keystore 文本内容</string>
    <string name="load_wallet_by_official_wallet_keystore_tip">直接复制粘贴以太坊官方钱包keystore文件内容至输入框。或者通过生成keystore内容的二维码，扫描录入。</string>
    <string name="load_wallet_by_official_wallet_help">什么是keystore？</string>
    <string name="load_wallet_by_official_wallet_keystore_input_tip">keystore文件无效</string>
    <string name="load_wallet_by_private_key_input_tip">无效的私钥</string>
    <string name="load_wallet_by_private_key_hint">明文私钥</string>
    <string name="load_wallet_by_private_key_help">什么是私钥？</string>
    <string name="load_wallet_by_observer_tip">观察钱包不需要导入私钥，只导入钱包地址，进行日常查看账户、交易和接受通知。大额资金的私钥建议使用冷钱包或硬件钱包管理，避免泄漏被盗。</string>
    <string name="load_wallet_by_observer_hint">扫码或输入钱包地址</string>
    <string name="load_wallet_by_observer_attention">注意：观察钱包发送交易时需要冷钱包配合签名。你可以使用另一台闲置手机，开飞行模式作为冷钱包，导入钱包私钥，配合离线签名。</string>
    <string name="wallet_detail_wallet_name">钱包名</string>
    <string name="wallet_detail_modify_pwd">修改密码</string>
    <string name="wallet_detail_derive_private_key">导出私钥</string>
    <string name="wallet_detail_derive_keystore">导出keystore</string>
    <string name="wallet_detail_delete_wallet">删除钱包</string>
    <string name="wallet_detail_save_success">保存成功</string>
    <string name="wallet_detail_wrong_pwd">密码错误</string>
    <string name="modify_password_title">更改密码</string>
    <string name="modify_password_old_pwd">当前密码</string>
    <string name="modify_password_new_pwd">新密码</string>
    <string name="modify_password_old_pwd_again">重复新密码</string>
    <string name="modify_password_tip">忘记密码？导入助记词或私钥可重置密码。</string>
    <string name="modify_password_import">马上导入</string>
    <string name="modify_password_complete">完成</string>
    <string name="modify_password_pwd_alert1">请输入原密码</string>
    <string name="modify_password_alert2">请输入新密码</string>
    <string name="modify_password_alert3">请再次输入新密码</string>
    <string name="modify_password_alert4">原密码错误</string>
    <string name="modify_password_alert5">新密码两次输入不一致</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="derive_private_key_alert">安全警告：私钥未经加密，导出存在风险，建议使用助记词和keystore进行备份</string>
    <string name="derive_private_key_copy_btn">复制</string>
    <string name="derive_private_key_already_copy_btn">已复制</string>
    <string name="derive_keystore_title">导出keystore文件</string>
    <string name="derive_keystore_keystore">keystore 文件</string>
    <string name="derive_keystore_qrcode">二维码</string>
    <string name="derive_keystore_tip_title">离线保存</string>
    <string name="derive_keystore_tip">请复制粘贴Keystore文件到安全、离线的地方保存。切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险</string>
    <string name="derive_keystore_tip2">请勿通过网络工具传输 Keystore文件，一旦被黑客获取将造成不可晚会的资产损失。建议离线设备通过扫二维码方式传输。</string>
    <string name="derive_keystore_tip3">如需在线保存，则建议使用安全等级更高的 1Password 等密码保管软件保存 Keystore。</string>
    <string name="derive_keystore_tip4">二维码禁止保存、截图、以及拍照、仅供用户在安全环境下直接扫描来方便的导入钱包。</string>
    <string name="derive_keystore_tip5">请在确保四周无人及无摄像头的情况下使用。二维码一旦被人获取将造成不可挽回的资产损失。</string>
    <string name="derive_keystore_tip_title2">请勿使用网络传输</string>
    <string name="derive_keystore_tip_title3">密码保险箱保存</string>
    <string name="derive_keystore_tip_title4">仅供直接扫描</string>
    <string name="derive_keystore_tip_title5">在安全环境下使用</string>
    <string name="citi_user_name">用户名</string>
    <string name="citi_user_passwords">密码</string>
    <string name="bind_bank_account">绑定实体账户</string>
    <string name="card_number">**** **** **** 7634</string>
    <string name="card_to_wallet">充值到钱包</string>
    <string name="wallet_to_card">默认钱包提现</string>
    <string name="exit_bank_account">退出账户</string>
    <string name="bank_link">更多银行业务</string>
</resources>