<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_menu_divider_color"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:background="@mipmap/card">

        <ImageView
            android:layout_width="163dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="41dp"
            android:src="@mipmap/bank" />


        <TextView
            android:id="@+id/card_number"
            android:layout_width="302dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="83dp"
            android:text="@string/card_number"
            android:textColor="@color/mine_menu_text_color"
            android:textSize="35sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/mine_menu_divider_color" />

    <LinearLayout
        android:id="@+id/lly_card_to_wallet"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="11dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/card_to_wallet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/card_to_wallet"
            android:textColor="@color/mine_menu_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/mine_menu_divider_color" />

    <LinearLayout
        android:id="@+id/lly_wallet_to_card"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/wallet_to_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:text="@string/wallet_to_card"
            android:textColor="@color/mine_menu_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/mine_menu_divider_color" />

    <LinearLayout
        android:id="@+id/lly_bank_link"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/bank_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/bank_link"
            android:textColor="@color/mine_menu_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/mine_menu_divider_color" />

    <LinearLayout
        android:id="@+id/lly_exit_bank_account"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="17dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_mine_personal_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/exit_bank_account"
            android:textColor="@color/mine_menu_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/mine_menu_divider_color" />


</LinearLayout>