<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:background="@mipmap/bg_property_header"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="23dp">

            <LinearLayout
                android:id="@+id/lly_back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="16dp"
                    android:src="@mipmap/ic_back" />

            </LinearLayout>

            <TextView
                android:id="@+id/assets_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/property_detail_title"
                android:textColor="@color/discovery_application_text_color"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="0.00"
            android:textColor="@color/discovery_application_item_name_color"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/add_property_gray_bg_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_transaction"
            android:textAllCaps="true"
            android:textSize="13sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_transaction_records"
        android:descendantFocusability="blocksDescendants"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <LinearLayout
            android:id="@+id/lly_transfer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/etc_transfer_advanced_setting_help_text_color"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@mipmap/ic_property_transfer" />

            <TextView
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/property_detail_transfer"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_gathering"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/discovery_application_item_name_color"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@mipmap/ic_property_gathering" />

            <TextView
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/property_detail_gathering"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>